async lessons done

--- a/DotNetLessons.WebApi/appsettings.json
+++ b/DotNetLessons.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DotNetLessonsDb": "Server=LOCALHOST\\SQLEXPRESS; Database=DotNetLessonsDb; Trusted_Connection=True; MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
